; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_stabs.c_pending_add_line.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_stabs.c_pending_add_line.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pending_list = type { i64, %struct.TYPE_6__* }
%struct.TYPE_6__ = type { %struct.TYPE_5__, i32 }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i32, i32, i64, i64 }

@PENDING_LINE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pending_list*, i32, i32, i64, i64)* @pending_add_line to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pending_add_line(%struct.pending_list* %0, i32 %1, i32 %2, i64 %3, i64 %4) #0 {
  %6 = alloca %struct.pending_list*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  store %struct.pending_list* %0, %struct.pending_list** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %11 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %12 = call i32 @pending_make_room(%struct.pending_list* %11)
  %13 = load i32, i32* @PENDING_LINE, align 4
  %14 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %15 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %14, i32 0, i32 1
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %15, align 8
  %17 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %18 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i64 %19
  %21 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %20, i32 0, i32 1
  store i32 %13, i32* %21, align 8
  %22 = load i32, i32* %7, align 4
  %23 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %24 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %23, i32 0, i32 1
  %25 = load %struct.TYPE_6__*, %struct.TYPE_6__** %24, align 8
  %26 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %27 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %26, i32 0, i32 0
  %28 = load i64, i64* %27, align 8
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %25, i64 %28
  %30 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  %32 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %31, i32 0, i32 0
  store i32 %22, i32* %32, align 8
  %33 = load i32, i32* %8, align 4
  %34 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %35 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %34, i32 0, i32 1
  %36 = load %struct.TYPE_6__*, %struct.TYPE_6__** %35, align 8
  %37 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %38 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %37, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %36, i64 %39
  %41 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %42, i32 0, i32 1
  store i32 %33, i32* %43, align 4
  %44 = load i64, i64* %9, align 8
  %45 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %46 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %45, i32 0, i32 1
  %47 = load %struct.TYPE_6__*, %struct.TYPE_6__** %46, align 8
  %48 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %49 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %48, i32 0, i32 0
  %50 = load i64, i64* %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %47, i64 %50
  %52 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %52, i32 0, i32 0
  %54 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %53, i32 0, i32 2
  store i64 %44, i64* %54, align 8
  %55 = load i64, i64* %10, align 8
  %56 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %57 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %56, i32 0, i32 1
  %58 = load %struct.TYPE_6__*, %struct.TYPE_6__** %57, align 8
  %59 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %60 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %59, i32 0, i32 0
  %61 = load i64, i64* %60, align 8
  %62 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %58, i64 %61
  %63 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %62, i32 0, i32 0
  %64 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %63, i32 0, i32 0
  %65 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %64, i32 0, i32 3
  store i64 %55, i64* %65, align 8
  %66 = load %struct.pending_list*, %struct.pending_list** %6, align 8
  %67 = getelementptr inbounds %struct.pending_list, %struct.pending_list* %66, i32 0, i32 0
  %68 = load i64, i64* %67, align 8
  %69 = add i64 %68, 1
  store i64 %69, i64* %67, align 8
  ret void
}

declare dso_local i32 @pending_make_room(%struct.pending_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
